syntax = "proto3";
package kratos.api;

option go_package = "{{cookiecutter.project_name}}/configs/conf;conf";

message Config {
  Global global = 1;
  Zap log = 2;
  Nacos nacos = 3;
  Server server = 4;
  Data data = 5;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    string timeout = 3;
    bool enableDoc = 4;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    string timeout = 3;
  }

  message Cors {
    string mode = 1;
    message Whitelist {
      string allowOrigin = 1;
      string allowHeaders = 2;
      string allowMethods = 3;
      string exposeHeaders = 4;
      bool allowCredentials = 5;
    }
    repeated Whitelist whitelist = 2;
  }

  HTTP http = 1;
  GRPC grpc = 2;
  Cors httpCors = 3;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string read_timeout = 3;
    string write_timeout = 4;
  }
  Database database = 1;
  Redis redis = 2;
}

message Zap {
  string level = 1;
  string format = 2;
  string filename = 3;
  int32 maxSize = 4;
  int32 maxBackups = 5;
  int32 maxAge = 6;
  bool compress = 7;
}

message Nacos {

  message NacosDiscovery {
    string ip = 1;
    int32 port = 2;
    string serviceName = 3;
    string groupName = 4;
    string clusterName = 5;
  }

  message NacosConfig{
    string ip = 1;
    int32 port = 2;
    string namespace = 3;
    int64 timeout = 4;

    string username = 5;
    string password = 6;
  }
  bool  enable = 1;
  string ip = 2;
  int32 port = 3;
  NacosDiscovery discovery = 4;
  NacosConfig config = 5;
}

message Global {
  string appName = 1;
  string env = 2;
  string version = 3;
  string id = 4;
}
